fixed tag cleaning, added test wordCount